[gd_scene load_steps=39 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scripts/personagem.gd" type="Script" id=2]
[ext_resource path="res://sprites/movebody.png" type="Texture" id=3]
[ext_resource path="res://tiles/mapa4.xml" type="TileSet" id=4]
[ext_resource path="res://sprites/nuvem1.png" type="Texture" id=5]
[ext_resource path="res://sprites/nuvem2.png" type="Texture" id=6]
[ext_resource path="res://sprites/nuvem3.png" type="Texture" id=7]
[ext_resource path="res://sprites/campo1.png" type="Texture" id=8]
[ext_resource path="res://sprites/campo2.png" type="Texture" id=9]
[ext_resource path="res://sprites/campo3.png" type="Texture" id=10]
[ext_resource path="res://scenas/Obstaculos.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenas/Obstaculos1.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenas/Obstaculos2.tscn" type="PackedScene" id=13]
[ext_resource path="res://sprites/botoes/left.png" type="Texture" id=14]
[ext_resource path="res://sprites/botoes/lefthover.png" type="Texture" id=15]
[ext_resource path="res://sprites/botoes/right.png" type="Texture" id=16]
[ext_resource path="res://sprites/botoes/righthover.png" type="Texture" id=17]
[ext_resource path="res://sprites/botoes/up.png" type="Texture" id=18]
[ext_resource path="res://sprites/botoes/uphover.png" type="Texture" id=19]
[ext_resource path="res://sprites/acaraje.png" type="Texture" id=20]
[ext_resource path="res://sprites/manga.png" type="Texture" id=21]
[ext_resource path="res://sprites/ameixa.png" type="Texture" id=22]
[ext_resource path="res://sprites/maca.png" type="Texture" id=23]
[ext_resource path="res://fonts/font140.fnt" type="BitmapFont" id=24]
[ext_resource path="res://scenas/acaraje_gera.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenas/ameixa_gera.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenas/manga_gera.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenas/maca_gera.tscn" type="PackedScene" id=28]
[ext_resource path="res://samples/voz_caindo_session.mp3.ogg" type="AudioStream" id=29]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 79.2858, 151.225 )

[sub_resource type="Animation" id=2]

length = 0.6
loop = true
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("spriteOya:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( -4, 828.388, 252, 360 ), Rect2( 300, 828.388, 220, 360 ), Rect2( 568, 828.388, 232, 360 ), Rect2( 38, 1225.65, 230, 339.832 ), Rect2( 322, 1225.65, 226, 339.832 ), Rect2( 582, 1225.65, 236, 339.832 ) ]
}

[sub_resource type="Animation" id=3]

resource/name = "caindo"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("spriteOya:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 38, 436.096, 244, 340.798 ), Rect2( 304, 436.096, 256, 350.192 ), Rect2( 576, 436.096, 252, 354.192 ) ]
}

[sub_resource type="Animation" id=4]

resource/name = "parada"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("spriteOya:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 582, 1592.52, 168, 335.35 ), Rect2( 322, 1592.52, 178, 331.784 ) ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("spriteOya:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 84, 60.84, 216, 332 ), Rect2( 348, 60.84, 204, 332 ), Rect2( 618, 60.84, 208, 332 ) ]
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 55.5483, 25.8945 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 10, 133 )

[sub_resource type="GDScript" id=8]

script/source = "extends Label

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	
	pass

	
"

[sub_resource type="GDScript" id=9]

script/source = "extends Label

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
		
	pass
"

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="respaw_time" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="respaw_point" type="Position2D" parent="."]

transform/pos = Vector2( 621.798, -90.7831 )

[node name="Oya" type="KinematicBody2D" parent="."]

transform/pos = Vector2( -83, 54 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.7, 0, 0, 0.7, 769.5, 454 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 2
collision/margin = 0.08
script/script = ExtResource( 2 )

[node name="camera" type="Camera2D" parent="Oya"]

transform/pos = Vector2( 735, 381 )
transform/scale = Vector2( 1.2, 1.2 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.2, 1.2 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 800
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.4
drag_margin/right = 0.2
drag_margin/bottom = 0.4

[node name="spriteOya" type="Sprite" parent="Oya"]

transform/pos = Vector2( 785, 448 )
transform/scale = Vector2( 0.7, 0.7 )
z/z = 1
texture = ExtResource( 3 )
region = true
region_rect = Rect2( -4, 828.388, 252, 360 )

[node name="shape" type="CollisionShape2D" parent="Oya"]

transform/pos = Vector2( 769.5, 454 )
transform/scale = Vector2( 0.7, 0.7 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="anim" type="AnimationPlayer" parent="Oya"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/MoveOya = SubResource( 2 )
anims/caindo = SubResource( 3 )
anims/parada = SubResource( 4 )
anims/pulando = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "MoveOya"

[node name="RayChao" type="RayCast2D" parent="Oya"]

visibility/light_mask = 2
transform/pos = Vector2( 726, 553 )
transform/scale = Vector2( 4, 4 )
enabled = true
cast_to = Vector2( 0, 1 )
layer_mask = 3
type_mask = 15

[node name="RayChao1" type="RayCast2D" parent="Oya"]

visibility/light_mask = 2
transform/pos = Vector2( 814, 553 )
transform/scale = Vector2( 4, 4 )
enabled = true
cast_to = Vector2( 0, 1 )
layer_mask = 3
type_mask = 15

[node name="corpo" type="Area2D" parent="Oya"]

editor/display_folded = true
transform/pos = Vector2( 769, 480 )
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 21 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Oya/corpo"]

transform/pos = Vector2( 0, 21 )
z/z = 1
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="TileMap" type="TileMap" parent="."]

transform/pos = Vector2( -8, 0 )
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 102, 103 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 2
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 94, 8, 65601, 5, 131099, 5, 131108, 8, 196609, 11, 196620, 8, 196626, 11, 196653, 8, 196659, 1, 196660, 3, 196661, 3, 196665, 0, 196669, 1, 196670, 3, 196671, 3, 196695, 1, 196696, 3, 196697, 3, 196698, 3, 196699, 3, 196700, 3, 196701, 3, 196702, 3, 196703, 3, 196704, 3, 196705, 0, 196706, 0, 196707, 0, 196708, 0, 196709, 0, 196710, 0, 196711, 0, 196712, 0, 196713, 0, 196714, 0, 262184, 1, 262185, 3, 262194, 0, 262195, 4, 262196, 4, 262197, 4, 262201, 4, 262203, 0, 262205, 4, 262206, 4, 262207, 4, 262208, 1, 262209, 3, 262210, 3, 262211, 3, 262212, 3, 262213, 3, 262214, 3, 262215, 3, 262216, 3, 262219, 1, 262220, 3, 262221, 3, 262222, 3, 262228, 1, 262229, 3, 262230, 3, 262231, 4, 262232, 4, 262233, 4, 262234, 4, 262235, 4, 262236, 4, 262237, 4, 262238, 4, 262239, 4, 262240, 4, 262241, 4, 262242, 4, 262243, 4, 262244, 4, 262245, 4, 262246, 4, 262247, 4, 262248, 4, 262249, 4, 262250, 4, 327680, 15, 327689, 15, 327696, 15, 327707, 1, 327708, 3, 327709, 3, 327714, 1, 327715, 3, 327716, 3, 327717, 3, 327718, 3, 327719, 3, 327720, 4, 327721, 4, 327729, 0, 327730, 4, 327731, 4, 327732, 4, 327733, 4, 327737, 4, 327739, 4, 327741, 4, 327742, 4, 327743, 4, 327744, 4, 327745, 4, 327746, 4, 327747, 4, 327748, 4, 327749, 4, 327750, 4, 327751, 4, 327752, 4, 327753, 0, 327754, 2, 327755, 4, 327756, 4, 327757, 4, 327758, 4, 327764, 4, 327765, 4, 327766, 4, 327767, 4, 327768, 4, 327769, 4, 327770, 4, 327771, 4, 327772, 4, 327773, 4, 327774, 4, 327775, 4, 327776, 4, 327777, 4, 327778, 4, 327779, 4, 327780, 4, 327781, 4, 327782, 4, 327783, 4, 327784, 4, 327785, 4, 327786, 4, 393216, 3, 393217, 3, 393218, 3, 393219, 3, 393220, 3, 393221, 3, 393222, 3, 393223, 3, 393224, 3, 393225, 3, 393226, 3, 393227, 3, 393228, 3, 393229, 3, 393230, 3, 393231, 3, 393232, 3, 393233, 3, 393234, 3, 393235, 3, 393236, 3, 393237, 3, 393238, 3, 393239, 3, 393240, 3, 393241, 3, 393242, 3, 393243, 4, 393244, 4, 393245, 4, 393250, 4, 393251, 4, 393252, 4, 393253, 4, 393254, 4, 393255, 4, 393256, 4, 393257, 4, 393261, 1, 393262, 3, 393263, 3, 393264, 3, 393265, 4, 393266, 4, 393267, 4, 393268, 4, 393269, 4, 393273, 4, 393275, 4, 393277, 4, 393278, 4, 393279, 4, 393280, 4, 393281, 4, 393282, 4, 393283, 4, 393284, 4, 393285, 4, 393286, 4, 393287, 4, 393288, 4, 393289, 4, 393290, 4, 393291, 4, 393292, 4, 393293, 4, 393294, 4, 393300, 4, 393301, 4, 393302, 4, 393303, 4, 393304, 4, 393305, 4, 393306, 4, 393307, 4, 393308, 4, 393309, 4, 393310, 4, 393311, 4, 393312, 4, 393313, 4, 393314, 4, 393315, 4, 393316, 4, 393317, 4, 393318, 4, 393319, 4, 393320, 4, 393321, 4, 393322, 4, 458752, 4, 458753, 4, 458754, 4, 458755, 4, 458756, 4, 458757, 4, 458758, 4, 458759, 4, 458760, 4, 458761, 4, 458762, 4, 458763, 4, 458764, 4, 458765, 4, 458766, 4, 458767, 4, 458768, 4, 458769, 4, 458770, 4, 458771, 4, 458772, 4, 458773, 4, 458774, 4, 458775, 4, 458776, 4, 458777, 4, 458778, 4, 458779, 4, 458780, 4, 458781, 4, 458786, 4, 458787, 4, 458788, 4, 458789, 4, 458790, 4, 458791, 4, 458792, 4, 458793, 4, 458797, 4, 458798, 4, 458799, 4, 458800, 4, 458801, 4, 458802, 4, 458803, 4, 458804, 4, 458805, 4, 458809, 4, 458811, 4, 458813, 4, 458814, 4, 458815, 4, 458816, 4, 458817, 4, 458818, 4, 458819, 4, 458820, 4, 458821, 4, 458822, 4, 458823, 4, 458824, 4, 458825, 4, 458826, 4, 458827, 4, 458828, 4, 458829, 4, 458830, 4, 458836, 4, 458837, 4, 458838, 4, 458839, 4, 458840, 4, 458841, 4, 458842, 4, 458843, 4, 458844, 4, 458845, 4, 458846, 4, 458847, 4, 458848, 4, 458849, 4, 458850, 4, 458851, 4, 458852, 4, 458853, 4, 458854, 4, 458855, 4, 458856, 4, 458857, 4, 458858, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="barreira_direita" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 9922, -308 )
input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -32, 484 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="barreira_direita"]

transform/pos = Vector2( -32, 484 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="barreira_esquerda" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 10, 2 )
input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -32, 484 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="barreira_esquerda"]

transform/pos = Vector2( -32, 484 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 0.5, 0 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 1242, 0 )

[node name="nuvem1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 225, 108 )
texture = ExtResource( 5 )

[node name="nuvem2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 632, 84 )
z/z = 1
texture = ExtResource( 6 )

[node name="nuvem3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 1089, 105 )
texture = ExtResource( 7 )

[node name="campo1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 202, 421 )
texture = ExtResource( 8 )

[node name="campo2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 618, 415.456 )
texture = ExtResource( 9 )

[node name="campo3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 1051.76, 421 )
transform/scale = Vector2( 1.09019, 1 )
texture = ExtResource( 10 )

[node name="Obstaculos" parent="." instance=ExtResource( 11 )]

visibility/light_mask = 4096

[node name="Obstaculos1" parent="." instance=ExtResource( 12 )]

transform/pos = Vector2( 5597, 15 )

[node name="Obstaculos2" parent="." instance=ExtResource( 13 )]

transform/pos = Vector2( 2080, 87 )

[node name="Respaw" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1.2, 1.2 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 800
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="canvasLayer" type="CanvasLayer" parent="."]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="controles" type="Node2D" parent="canvasLayer"]

editor/display_folded = true

[node name="touchLeft" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 22.1863, 589.488 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 14 )
pressed = ExtResource( 15 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="touchRight" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 204.186, 597.488 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 16 )
pressed = ExtResource( 17 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="touchUp" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 1078.66, 590.152 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 18 )
pressed = ExtResource( 19 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="acaraje" type="Sprite" parent="canvasLayer"]

transform/pos = Vector2( 40.4922, 55.4922 )
transform/scale = Vector2( 0.548866, 0.548866 )
texture = ExtResource( 20 )

[node name="manga" type="Sprite" parent="canvasLayer"]

transform/pos = Vector2( 550.012, 44.012 )
transform/scale = Vector2( 0.86579, 0.86579 )
texture = ExtResource( 21 )

[node name="ameixa" type="Sprite" parent="canvasLayer"]

transform/pos = Vector2( 290.012, 44.012 )
transform/scale = Vector2( 0.86579, 0.86579 )
texture = ExtResource( 22 )

[node name="maca" type="Sprite" parent="canvasLayer"]

transform/pos = Vector2( 819.012, 47.012 )
transform/scale = Vector2( 0.86579, 0.86579 )
texture = ExtResource( 23 )

[node name="pontos_acaraje" type="Label" parent="canvasLayer"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 81.0
margin/top = -5.0
margin/right = 247.0
margin/bottom = 127.0
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0.686275, 0.243137, 0.109804, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 7
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 1
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = SubResource( 8 )

[node name="tex_bestscore" type="Label" parent="canvasLayer"]

process/pause_mode = 2
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 42.0
margin/top = 75.0
margin/right = 208.0
margin/bottom = 207.0
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0.686275, 0.243137, 0.109804, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 7
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 1
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = SubResource( 9 )

[node name="pontos_ameixa" type="Label" parent="canvasLayer"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 331.0
margin/top = -4.0
margin/right = 497.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0.588235, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 7
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 1
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = SubResource( 8 )

[node name="ameixa_score" type="Label" parent="canvasLayer"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 289.0
margin/top = 76.0
margin/right = 455.0
margin/bottom = 208.0
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0.588235, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 7
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 1
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = SubResource( 8 )

[node name="pontos_manga" type="Label" parent="canvasLayer"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 591.0
margin/top = -4.0
margin/right = 757.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0.960784, 0.505882, 0.188235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 7
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 1
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = SubResource( 8 )

[node name="manga_score" type="Label" parent="canvasLayer"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 551.0
margin/top = 76.0
margin/right = 717.0
margin/bottom = 208.0
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0.960784, 0.505882, 0.188235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 7
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 1
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = SubResource( 8 )

[node name="pontos_maca" type="Label" parent="canvasLayer"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 860.0
margin/top = -4.0
margin/right = 1026.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0.827451, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 7
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 1
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = SubResource( 8 )

[node name="maca_score" type="Label" parent="canvasLayer"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 824.0
margin/top = 73.0
margin/right = 990.0
margin/bottom = 205.0
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0.827451, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 7
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 1
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = SubResource( 8 )

[node name="time" type="Label" parent="canvasLayer"]

visibility/visible = false
anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 69.0
margin/top = 0.0
margin/right = -99.0
margin/bottom = 132.0
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0.976471, 0.239216, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 7
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 1
text = "22"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="acaraje_gera" parent="." instance=ExtResource( 25 )]

[node name="ameixa_gera" parent="." instance=ExtResource( 26 )]

[node name="manga_gera" parent="." instance=ExtResource( 27 )]

[node name="maca_gera" parent="." instance=ExtResource( 28 )]

[node name="somHit" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 29 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0299997
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="timeout" from="respaw_time" to="." method="_on_respaw_time_timeout"]

[connection signal="acaraje" from="Oya" to="." method="_on_Oya_acaraje"]

[connection signal="ameixa" from="Oya" to="." method="_on_Oya_ameixa"]

[connection signal="maca" from="Oya" to="." method="_on_Oya_maca"]

[connection signal="manga" from="Oya" to="." method="_on_Oya_manga"]

[connection signal="morreu" from="Oya" to="." method="_on_Oya_morreu"]

[connection signal="body_enter" from="Oya/corpo" to="Oya" method="_on_corpo_body_enter"]

[connection signal="pressed" from="canvasLayer/controles/touchLeft" to="Oya" method="_on_touchLeft_pressed"]

[connection signal="released" from="canvasLayer/controles/touchLeft" to="Oya" method="_on_touchLeft_released"]

[connection signal="pressed" from="canvasLayer/controles/touchRight" to="Oya" method="_on_touchRight_pressed"]

[connection signal="released" from="canvasLayer/controles/touchRight" to="Oya" method="_on_touchRight_released"]

[connection signal="pressed" from="canvasLayer/controles/touchUp" to="Oya" method="_on_touchUp_pressed"]

[connection signal="released" from="canvasLayer/controles/touchUp" to="Oya" method="_on_touchUp_released"]


